--- a/Dissertation/6evaluation.tex
+++ b/Dissertation/6evaluation.tex
@@ -308,7 +308,7 @@ Finally, as shown in Figure~\ref{fig:finalcoremodel}, we subjected the remaining
 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.85\textwidth]{figures/sem_model.png}
+	\includegraphics[width=0.85\textwidth]{figures/sem_model.pdf}
 	\caption{ Trimmed structural equation model. $* p < .05, ** p < .01, *** p < .001$.}
 	\label{fig:finalcoremodel}
 \end{figure}
@@ -380,12 +380,12 @@ Perceived control, Perceived helpfulness, and the satisfaction all determine per
 %\end{table}
 
 \section{Discussion}
-In this chapter we conducted a systematic evaluation of the effect of several design parameters of a household IoT privacy settings interface on users’ evaluation of the system. In terms of managerial implications, we find that it is useful to utilize the data-driven approach to develop ``smart defaults" and ``smart profiles", and corresponding setting interfaces to improve users' experience and satisfaction. We did not find significant difference between the two UIs. This could be explained that the difference between those two UIs are subtle and both of them are effective when integrating the smart defaults/profiles to them.
+In this chapter we conducted a systematic evaluation of the effect of several design parameters of a household IoT privacy settings interface on users’ evaluation of the system. In terms of managerial implications, we find that it is useful to utilize the data-driven approach to develop ``smart defaults" and ``smart profiles", and corresponding setting interfaces to improve users' experience and satisfaction. We did not find significant difference between the two UIs. A possible explanation for this is that design differences between the UIs were very subtle.
 
-Regarding the negative effect from perceived helpfulness on perceived control, there are a few possible explanations: i) It is possible that participants in ``smart defaults" and ``smart profiles" condition found their privacy-settings have already been set by defaults. Thus, they found those ``smart defaults" and ``smart profiles" generated from previous study are helpful. However, in the other hand, users may feel that their choice of settings have been limited due to these helpful pre-settings. ii) It is also possible that users feel as though the pre-set settings are helpful but also complicated. They feel they do not have control over these settings. These are also corresponding to our previous discussion on the trade-off between accuracy and parsimony. A more parsimonious profile would be easier to explain to the users and also make them less worried about the pre-defined settings. So users are debating between the benefit brought by the ``smart defaults" and ``smart profiles" and the control they like to have over these privacy settings of their household IoT devices.
+Regarding the negative effect from perceived helpfulness on perceived control, there are a few possible explanations: i) It is possible that participants in ``smart defaults" and ``smart profiles" condition found their privacy-settings have already been set by defaults. Thus, they found those ``smart defaults" and ``smart profiles" generated from previous study are helpful. However, in the other hand, users may feel that their choice of settings have been limited due to these helpful pre-settings. ii) It is also possible that users feel as though the pre-set settings are helpful but also complicated. They feel they have less control over these settings. These are also corresponding to our previous discussion on the trade-off between accuracy and parsimony. A more parsimonious profile would be easier to explain to the users and also make them less worried about the pre-defined settings. So users are debating between the benefit brought by the ``smart defaults" and ``smart profiles" and the control they like to have over these privacy settings of their household IoT devices.
 iii) We also revisit the perceived scale that we used. It appear that all the items in that scale are reversed framed and related to the spirit of ``losing control" and having limited control when using the system. One example is question C4, ``I would like to have more control over the recommendations". Our system is all about make privacy setting recommendations. While we are making the right recommendation about the IoT privacy settings for users, they might still want more control and configure these settings by themselves, leading less control perceived.
 
-Another interest point is that the lack of difference between smart default and smart profiles. We first investigated the time spent on the two conditions. Figure~\ref{fig:timeonui} shows the effect size of average time spent on different UI pages. Although the average time spent on smart defaults is higher than the smart profiles condition, the effect is not significant. So this could not be explained by the lack of interaction due to less time spent on the smart profiles than the smart defaults.
+Another interesting point is that the lack of difference between smart default and smart profiles in the effect on the user experience and subjective system aspects. We first investigated the time spent on the two conditions. Figure~\ref{fig:timeonui} shows the effect size of average time spent on different UI pages. Although the average time spent on smart defaults is higher than the smart profiles condition, the effect is not significant. So this could not be explained by the lack of interaction due to less time spent on the smart profiles than the smart defaults.
 
 \begin{figure}
 	\centering
@@ -396,12 +396,12 @@ Another interest point is that the lack of difference between smart default and 
 
 The finding is still interesting since users are expected to spend less time on smart profiles. And these lack of difference between smart defaults and smart profiles could be due to following reasons:
 
-i) \textbf{Laziness?} Since in our smart profiles conditions for both interfaces, there are detailed description about the profile being showed. Thus, users would know what the setting will be like for smart profile condition. However, for smart defaults condition, users would not know what settings have been set there without going through all the settings. Thus, this could lead more time spent on the smart defaults UI page and better user experience.
+i) \textbf{Laziness?} Since in our smart profiles conditions for both interfaces, there are detailed description about the profile being showed. Thus, users would know what the setting will be like for smart profile condition. Users would have to spend more cognitive effort to individually go ahead and change the smart default settings provided, which means one would have to spend more time and effort to get the settings to their preference. Here, people are not entirely confident whether the recommended defaults are matching their preferences and hence have to go in manually anyway to do so. Thus, this could lead more time spent on the smart defaults UI page and possible better user experience.
 
 ii) \textbf{Accuracy?} The second possible reason could be that the accuracy of the smart profiles are better than the smart defauls that we used. The higher accuracy the pre-settings are, the more likely users would make less changes and leave the settings as is, leading less time spent on the smart profiles UI page.
 
-ii) \textbf{Endowment effect?} Since the smart defaults are provided by the system, while in the smart profile condition, users have to choose their own profile by reading the description of the profile. They might think they have already made the effort by reading the description and making the decision on choosing their favorite profile. Thus, they might think the profile that they chose fits their preference the best and would not take a deeper look or give more careful review on the settings in that profile.
+ii) \textbf{Endowment effect?} Since the smart defaults are provided by the system, while in the smart profile condition, users have to choose their own profile by reading the description of the profile. So it is highly likely that they would try to stick to their choice as changing it now would call for expending additional cognitive effort and would rather avoid it. Thus, they might think the profile that they chose fits their preference the best and would not take a deeper look or give more careful review on the settings in that profile.
 
 There are several limitations to our work. First of all, our sample is not large enough to carefully examine 2- or 3-way interaction effects in M-plus. We examined the effect of personal characteristics on the user experience individually, and did not find any significant effect. A larger sample is needed to test these effects and assure the robustness of our results. Second, we planned to examined the behavior data that how users make the changes to the pre-defined settings. However, due to the coding problem, we were not able to access data. This should be improved in the next user study since users' setting behavior could give us more hints to explain our previous findings.
 
-From the results of this study, we encourage privacy researchers, policy-makers, and industry executives to consider the effects of privacy settings interfaces on privacy outcomes. This paper shows that subtle changes in the design of such interfaces can have important subjective and behavioral consequences. Careful design of these systems is help users better setting their IoT devices.
+From the results of this study, we encourage privacy researchers, policy-makers, and industry executives to consider the effects of privacy settings interfaces on privacy outcomes. This study shows that subtle changes in the design of such interfaces can have important subjective and behavioral consequences. Careful design of these systems can help users better setting their IoT devices.
