--- a/Dissertation/7conclusion.tex
+++ b/Dissertation/7conclusion.tex
@@ -13,7 +13,7 @@ The main contribution of my dissertation are:
 	\item Finally, we conducted a study to evaluate the designed interfaces in terms of interface complexity and profile complexity. The results show that smart defaults and smart profiles integrated in our privacy-setting interfaces have significantly improved users experience compared to the baseline condition.
 \end{itemize}
 
-These research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
+This research can benefit the IoT users, manufacturers, and researchers, privacy-setting interface designers and anyone who wants to adopt IoT devices.
 I suggest the designers of future IoT privacy-setting interface to make use of our data-driven approach and carefully consider the trade-off between ``smart defaults" and ``smart profiles". ``smart profiles" and ``smart defaults" can be the viable route for designing future IoT privacy-setting interface. When designing their own setting interfaces and smart defaults/profiles, the effect of interface complexity and profile complexity should be carefully investigated based on their own user groups, dataset, and contexts.
 
 
